fixed bug where navbar was taking full width and animations were not proper on phones by making all parent containers overflow:hidden, everything works good now!!!:

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,7 @@ html{
 .hover-effect:hover {
   transform: translateY(-5px) scale(1.1);
 }
+
+#Experience, #About, #Projects, #Contact, #certifications, #Education, #Contact{
+  overflow: hidden;
+}
